<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout 
	    	android:orientation="horizontal" 
	    	android:background="#F5F5F5"
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/lllayout"
	    	>
    	
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <TextView 
                android:padding="10dip"
                android:id="@+id/sp"
                android:text="@string/title_sp"
                android:gravity="center"
                android:textSize="18dip"
                android:textColor="@color/green"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            
        </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:clickable="true"
            android:saveEnabled="false"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <RelativeLayout
		          android:padding="0dip"
		          android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
		          >
            <TextView 
                android:padding="10dip"
                android:id="@+id/faxian"
                android:text="@string/title_zixun"
                android:gravity="center"
                android:textSize="18dip"
                android:textColor="@color/black"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            <TextView
            android:id="@+id/infoCount"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/icon_shuzi_bg"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="10dip"
            android:text=""
            android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:focusable="false"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <TextView 
                android:padding="10dip"
                android:id="@+id/textme"
                android:text="@string/title_me"
                android:gravity="center"
                android:textSize="18dip"
                android:textColor="@color/black"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>