<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <include layout="@layout/top1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <LinearLayout
            android:id="@+id/head_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingTop="5dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <ImageView
                    android:id="@+id/user_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/user_img"
                    
                    android:gravity="left"
                    android:padding="2dip"
                    android:text="@string/head_photo"
                    android:textColor="@color/black"
                    android:textSize="20dip" />

                <ImageView
                    android:id="@+id/settings1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_icon01" />

                <com.my.widget.HeadImageView
                    android:id="@+id/myAvatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@id/settings1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/avt_user_male" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgray" />

        <LinearLayout
            android:id="@+id/binding_community_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingTop="5dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <ImageView
                    android:id="@+id/user_binding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_binding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/user_binding"
                    
                    android:gravity="left"
                    android:padding="2dip"
                    android:text="@string/binding_community"
                    android:textColor="@color/black"
                    android:textSize="20dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_icon01" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgray" />

        <LinearLayout
            android:id="@+id/check_update_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingTop="5dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <ImageView
                    android:id="@+id/user_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/user_update"
                    
                    android:gravity="left"
                    android:padding="2dip"
                    android:text="@string/check_update"
                    android:textColor="@color/black"
                    android:textSize="20dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_icon01"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgray" />

        <LinearLayout
            android:id="@+id/aboutus_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingTop="5dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <ImageView
                    android:id="@+id/user_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_about" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    
                    android:gravity="right"
                    android:padding="2dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_icon01"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/user_about"
                    
                    android:gravity="left"
                    android:padding="2dip"
                    android:text="@string/aboutus"
                    android:textColor="@color/black"
                    android:textSize="20dip" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgray" />

        <Button
            android:id="@+id/swicth_roler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/switch_to_doctor" />
    </LinearLayout>

</LinearLayout>